Able to play Round via button click. TODO: Add GUI

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <title>Page Title</title>
 </head>
 <body>
+  <div class="choices">
+    <button id="rock">ROCK</button>
+    <button id="paper">PAPER</button>
+    <button id="scissors">SCISSORS</button>
+  </div>
   <script src="./game.js"></script>
 </body>
 </html>
