--- a/index.html
+++ b/index.html
@@ -7,30 +7,35 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="choices">
-    <div class="playerOptions">
-      <button id="rock">ROCK</button>
-      <button id="paper">PAPER</button>
-      <button id="scissors">SCISSORS</button>
+  <div class="container">
+    <h1>THIS IS ROCK PAPER SCISSORS</h1>
+    <h2>THE MOST INTENSE GAME EVER AND ALSO THE HARDEST PROGRAMMING PROJECT EVERRRRR</h2>
+    <h3>FIRST TO 5 WINS</h3>
+    <div class="choices">
+      <div class="playerOptions">
+        <button id="rock">ROCK</button>
+        <button id="paper">PAPER</button>
+        <button id="scissors">SCISSORS</button>
+      </div>
+      <div class="restartDiv">
+        <button id="restart">RESTART</button>
+      </div>
     </div>
-    <div class="restartDiv">
-      <button id="restart">RESTART</button>
+    <div class="scoreboard">
+      <div class="scores">
+        <p class="score" id="playerScore">PLAYER (THIS IS YOU): 0</p>
+      </div>
+      <div class="scores">
+        <p class="score" id="computerScore">COMPUTER (NOT YOU): 0</p>
+      </div>
     </div>
-  </div>
-  <div class="scoreboard">
-    <div class="scores">
-      <p class="score" id="playerScore">Player: 0</p>
-    </div>
-    <div class="scores">
-      <p class="score" id="computerScore">Computer: 0</p>
-    </div>
-  </div>
-  <div class="results">
-    <div class="result">
-      <p id="resultOfRound">Round Result: </p>
-    </div>
-    <div class="result">
-      <p id="resultOfMatch">Game Result: </p>
+    <div class="results">
+      <div class="result">
+        <p id="resultOfRound">ROUND RESULT OF THE ROUND YOU JUST PLAYED: </p>
+      </div>
+      <div class="result">
+        <p id="resultOfMatch">GAME RESULT: </p>
+      </div>
     </div>
   </div>
   <script src="./game.js"></script>
